--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
-# Create and write to requirements.txt using standard Python file operations
-with open("requirements.txt", "w") as f:
-    f.write("streamlit\n")
-    f.write("google-generativeai\n")
+%%writefile requirements.txt
+streamlit
+markdown-it-py
+mdurl
+pygments
+rich
